[tool.poetry]
name = "django-sitez"
version = "0.1.0"
description = "this is an app"
authors = ["idolla <3rick8@A.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
